fix vertical alignment in bids table

--- a/public/css/components/bids.styl
+++ b/public/css/components/bids.styl
@@ -1,6 +1,9 @@
 .bids-table
   width 100%
 
+  td
+    vertical-align middle
+
   thead
     th.unread-and-star
       width 5%
